atividades adicionadas e renomeadas

--- a/atividade5.html
+++ b/atividade5.html
@@ -6,7 +6,7 @@
     <title>exercicio1</title>
     <style>
         body{
-            background-image: url(imagensexercicio1/fundo3.jpg);
+            background-image: url(imagens/fundo3.jpg);
             background-size: cover;
             background-color:rgb(0, 0, 155);
             background-repeat: no-repeat;
