--- a/atividade7.html
+++ b/atividade7.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 3</title>
-    <link rel="stylesheet" href="css/exercicio3.css" type="text/css" />
+    <link rel="stylesheet" href="css/atividade7.css" type="text/css" />
 </head>
 <body>
     <div id="fundoGeral"></div>
