alterações na head

--- a/atividade6.html
+++ b/atividade6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício 2 - Camadas absolutas</title>
+    <title>Atividade 6</title>
     <link rel="stylesheet" href="css/atividade6.css" type="text/css" />
 </head>
 <body>
