--- a/atividade7.html
+++ b/atividade7.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercício 3</title>
+    <title>Atividade 7</title>
     <link rel="stylesheet" href="css/atividade7.css" type="text/css" />
 </head>
 <body>
